# ai-medimg-playground

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data_processed/: index.csv
deploy/: __init__.py  app.py  cli_infer.py  inference_runtime.py
docs/: README.md  day4_data_module.md  day5_unet_cpu.md  day7_deploy.md  interview_notes.md  limitation_improvements.md  model_card.md  one_page_summary.md  project_journal.md  release_notes_v1.0.md
outputs/: day4_data_report.json  day5_infer_report.json  day5_train_report.json
saved_models/: best.pt
scripts/: check.py  classical_baseline.py  infer.py  inspect_series.py  make_index.py  preprocess_series.py  report.py  train.py
src/: calibration.py  config.py  dicom_loader.py  preprocessing.py  robustness.py  visualization.py
src/baselines/: __init__.py  classical_seg.py
src/data/: __init__.py  ct25d_dataset.py
src/models/: __init__.py  unet_small.py
tests/: test_classical_seg.py  test_ct25d_dataset.py  test_e2e_smoke.py  test_loader.py  test_preprocessing.py  test_unet_metrics.py
text summary/: day1_summary.md  day2_summary.md  day3_summary.md  day4_summary.md  day5_summary.md  day6_summary.md  day7_summary.md  limitation_improvements.md
