[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-medimg-playground"
version = "0.5.0"
description = "Day 1-5 DICOM ingestion, preprocessing, pseudo-labeling, 2.5D data module, and lightweight U-Net CPU training."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "opencv-python",
  "pandas",
  "pydicom",
  "scikit-image",
  "scipy",
  "SimpleITK",
  "tqdm",
]

[project.optional-dependencies]
ml = [
  "fastapi",
  "monai",
  "onnxruntime",
  "torch",
  "uvicorn",
]
