[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-medimg-playground"
version = "0.7.0"
description = "Day 1-7 DICOM ingestion, preprocessing, pseudo-labeling, 2.5D training, reporting, and deployable ONNX CPU inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "opencv-python",
  "pandas",
  "pydicom",
  "scikit-image",
  "scipy",
  "SimpleITK",
  "tqdm",
]

[project.optional-dependencies]
ml = [
  "fastapi",
  "monai",
  "onnx",
  "onnxruntime",
  "python-multipart",
  "torch",
  "uvicorn",
]
dev = [
  "ruff",
]
